--- a/rebar.config
+++ b/rebar.config
@@ -22,9 +22,7 @@
 {deps_dir, "deps"}.
 
 {deps, [
-    {lager, "2.0.1",
-        {git, "git://github.com/basho/lager.git",
-            {tag, "2.0.1"}}}
+    {lager, ".*", {git, "https://github.com/basho/lager.git", {tag, "3.1.0"}}}
 ]}.
 
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
